# serpent

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: keys.rs  lib.rs  tables.rs  transforms.rs
tests/: cbc_d_m.txt  cbc_e_m.txt  ecb_iv.txt  known_answer.rs
