[package]
name = "serpent-cipher"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Lars Viklund <zao@zao.se>"]
edition = "2018"
description = "A pure Rust implementation of the Serpent block cipher candidate for the AES standard."
homepage = "https://gitlab.com/zao/serpent/"
repository = "https://gitlab.com/zao/serpent/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-cipher-trait = "^0.6"
byteorder = "^1.3"