[package]
name = "serpent-cipher"
version = "0.1.1"
license = "MIT OR Apache-2.0"
authors = ["Lars Viklund <zao@zao.se>"]
edition = "2018"
description = "A naive pure Rust implementation of the Serpent block cipher."
repository = "https://gitlab.com/zao/serpent/"
readme = "README.md"
keywords = ["serpent", "cipher", "crypto", "encryption"]
categories = ["cryptography"]

[badges]
gitlab = { repository = "https://gitlab.com/zao/serpent/" }
maintenance = { status = "experimental" }

[lib]
name = "serpent"

[dependencies]
block-cipher-trait = "^0.6"
byteorder = "^1.3"